# rhythm_game

./: .gitignore  Cargo.toml  README.md
assets/songs/: a_limited_one.yaml  abraxas.toml  abraxas.yaml  all_song_data.yaml  autoseeker.yaml  hot_tide.toml  hot_tide.yaml  test.toml  test.yaml
src/: constants.rs  events.rs  game_constants.rs  main.rs
src/components/: audio.rs  editor.rs  home_menu.rs  load.rs  mod.rs  note.rs  result_screen.rs  song_select.rs  target_line.rs  timer.rs  ui.rs
src/components/receptor/: all_sync.rs  double_tap.rs  full_sync.rs  mod.rs  step_left.rs  step_right.rs  step_trill.rs  trill.rs
src/debug/: mod.rs  receptor_info.rs  result.rs  song_select.rs
src/resources/: config.rs  editor.rs  game_scene.rs  game_state.rs  handles.rs  mod.rs  note.rs  score.rs  song.rs  song_list.rs
src/resources/handles/: game.rs  home_menu.rs  mod.rs  song_select.rs
src/systems/: audio.rs  home_menu.rs  load.rs  mod.rs  note.rs  receptor.rs  result_screen.rs  score.rs  song_select.rs  system_labels.rs  target_note.rs  timer.rs  ui.rs
src/systems/editor/: io.rs  mod.rs  note.rs  ui.rs
