[package]
name = "rhythm_2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.8.1", features = ["mp3"] }
rand = "*"
itertools = "0.10"
toml = "0.5"
serde = "1.0"
serde_derive = "1.0"
