[package]
name = "rhythm_2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Bevyのbevy_audio, vorbis機能を無効化するための設定を行っている.
bevy = { version = "0.8.1", default-features = false, features = [
    "bevy_asset",
    "bevy_winit",
    "bevy_scene",
    "render",
    "png",
    "hdr",
    "x11",
    "filesystem_watcher",
] }
bevy_kira_audio = { version = "0.12", features = ["wav", "mp3"] }
# Bevy自体の依存バージョンと一致させること, とある.
# https://github.com/bevyengine/bevy/blob/main/crates/bevy_winit とかを見る.
winit = { version = "0.26.0", default-features = false }
image = { version = "0.24", default-features = false }

rand = "*"
itertools = "0.10"
toml = "0.5"
serde = "1.0"
serde_derive = "1.0"
