[package]
name = "rhythm_2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Bevyのbevy_audio, vorbis機能を無効化するための設定を行っている.
bevy = { version = "0.9.1", default-features = false, features = [
    "bevy_asset",
    "bevy_winit",
    "bevy_scene",
    "render",
    "png",
    "hdr",
    "x11",
    "filesystem_watcher",
] }
bevy_kira_audio = { version = "0.13", features = ["wav", "mp3"] }

rand = "0.8"
itertools = "0.10"
toml = "0.5"
serde = "1.0"
serde_derive = "1.0"
